[package]
name = "wavelet"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiff = "*"
png = "*"
bytemuck = "*"

[profile.release]
lto = true
opt-level = 3